--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             </li>
         </ul>
         <hr size="3", noshade>
-        <a href="file:///C:/Python%20Projects/Web%20development/HTML%20-%20START/Books.html"><h3>Book I had read</h3></a>
+        <a href="Books.html"><h3>Book I had read</h3></a>
         <hr size="3", noshade>
-        <a href="file:///C:/Python%20Projects/Web%20development/HTML%20-%20START/contact.html"><h3><strong>Contact Us</strong></h3></a>
+        <a href="contact.html"><h3><strong>Contact Us</strong></h3></a>
         <hr size="3", noshade>
 
         <p>Work Experience</p>
